--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -20,4 +20,5 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: danielhons/jwt-exchange
           tag_with_ref: true
+          tags: latest
           push: ${{ startsWith(github.ref, 'refs/tags/') }}
