Update readme, use latest tag in docker compose yaml

--- a/examples/postgrest/docker-compose.yml
+++ b/examples/postgrest/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.7"
 
 services:
   tx:
-    image: danielhons/jwt-exchange:v0.03
+    image: danielhons/jwt-exchange:latest
     ports:
     - "9002:9002"
     env_file:
