--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,18 +21,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-
-    - name: Build
-      run: go build -v .
-
-    - name: Test
-      run: go test -v .
+      run: go get -u -v -f all
 
     - name: Test Lib
-      run: cd jwt_exchange && go test
+      run: go test ./pkg/*
